@@ -14,6 +14,25 @@ This is a {{ site.pmd.release_type }} release.
 
 ### 🚀 New and noteworthy
 
+#### 🚀 New: Java 24 Support
+This release of PMD brings support for Java 24. There are no new standard language features,
+but a couple of preview language features:
+
+* [JEP 488: Primitive Types in Patterns, instanceof, and switch (Second Preview)](https://openjdk.org/jeps/488)
+* [JEP 492: Flexible Constructor Bodies (Third Preview)](https://openjdk.org/jeps/492)
+* [JEP 494: Module Import Declarations (Second Preview)](https://openjdk.org/jeps/494)
+* [JEP 495: Simple Source Files and Instance Main Methods (Fourth Preview)](https://openjdk.org/jeps/495)
+
+In order to analyze a project with PMD that uses these preview language features,
+you'll need to enable it via the environment variable `PMD_JAVA_OPTS` and select the new language
+version `24-preview`:
+
+    export PMD_JAVA_OPTS=--enable-preview
+    pmd check --use-version java-24-preview ...
+
+Note: Support for Java 22 preview language features have been removed. The version "22-preview"
+are no longer available.
+
 #### New GPG Release Signing Key
 
 Since January 2025, we switched the GPG Key we use for signing releases in Maven Central to be
@@ -52,14 +71,24 @@ For the changes, see [PMD Designer Changelog (7.10.0)](https://github.com/pmd/pm
   * [#3158](https://github.com/pmd/pmd/issues/3158): \[apex] ApexSuggestUsingNamedCred false positive with Named Credential merge fields
 * documentation
   * [#2492](https://github.com/pmd/pmd/issues/2492): \[doc] Promote wiki pages to standard doc pages
+* java
+  * [#5154](https://github.com/pmd/pmd/issues/5154): \[java] Support Java 24
 * java-performance
   * [#5311](https://github.com/pmd/pmd/issues/5311): \[java] TooFewBranchesForSwitch false positive for exhaustive switches over enums without default case
 
 ### 🚨 API Changes
 
+#### Removed Experimental API
+* pmd-java
+  * `net.sourceforge.pmd.lang.java.ast.ASTTemplate`, `net.sourceforge.pmd.lang.java.ast.ASTTemplateExpression`,
+    `net.sourceforge.pmd.lang.java.ast.ASTTemplateFragment`: These nodes were introduced with Java 21 and 22
+    Preview to support String Templates. However, the String Template preview feature was not finalized
+    and has been removed from Java for now. We now cleaned up the PMD implementation of it.
+
 ### ✨ Merged pull requests
 <!-- content will be automatically generated, see /do-release.sh -->
 * [#5412](https://github.com/pmd/pmd/pull/5412): \[java] Support exhaustive switches - [Andreas Dangel](https://github.com/adangel) (@adangel)
+* [#5471](https://github.com/pmd/pmd/pull/5471): \[java] Support Java 24 - [Andreas Dangel](https://github.com/adangel) (@adangel)
 * [#5488](https://github.com/pmd/pmd/pull/5488): \[apex] Fix #3158: Recognize Named Credentials merge fields in ApexSuggestUsingNamedCredRule - [William Brockhus](https://github.com/YodaDaCoda) (@YodaDaCoda)
 
 ### 📦 Dependency updates
